working on localStorage

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <title>coding-test</title>
     <!-- stylesheets here -->
     <!-- apis here -->
+    <style>
+        .hide{
+            display:none
+        }
+    </style>
 </head>
 
 <body>
     
+
+      
     <!-- load javascript here -->
     <script src="./assets/js/script.js"></script>
 </body>
